--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
+  <script src="js/scripts.js"></script>
 </head>
 <body>
+  <div class="container">
   <h1>Rasili Club</h1>
   <p>Congratulations on making it to the end of the Javascript course. In order o get your certificate you'll need to take the final test.</p>
+  </div>
 </body>
 </html>
