Ctreate a div and use bootstrap classes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
   <div class="container">
+    <div class="jumbotron">
   <h1>Rasili Club</h1>
   <p>Congratulations on making it to the end of the Javascript course. In order o get your certificate you'll need to take the final test.</p>
+  </div>
   </div>
 </body>
 </html>
