Add input tags to collect values

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       <div class="modu">
     <h3>1.What is the value of the following expression: 8%3?</h3>
     <ul>
-    
+      <li><input id="mod" type="radio" name="que1" value="0" ><strong>5</strong></li>
+      <li><input id="mod" type="radio" name="que1" value="5" ><strong>2</strong></li>
+      <li><input id="mod" type="radio" name="que1" value="0" ><strong>3</strong></li>
+      <li><input id="mod" type="radio" name="que1" value="0" ><strong>2.67</strong></li>
     </ul>
   </div>
 </body>
