Add button tags

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
   <div class="container">
+    <div class="ras">
     <div class="jumbotron">
   <h1>Rasili Club</h1>
   <p>Congratulations on making it to the end of the Javascript course. In order o get your certificate you'll need to take the final test.</p>
+  </div>
+  <button id="but0" class="btn btn-primary" type="button" name="button">Take Test</button>
   </div>
   <div id="vaj" class="jumbotron">
       <h1 id="jav">Javascript Quiz</h1>
