--- a/index.html
+++ b/index.html
@@ -30,6 +30,51 @@
       <li><input id="mod" type="radio" name="que1" value="0" ><strong>3</strong></li>
       <li><input id="mod" type="radio" name="que1" value="0" ><strong>2.67</strong></li>
     </ul>
+    <button id="but1" class="btn btn-primary" type="button" name="button" onclick = "" >Next</button>
+</div>
+  <div class="dat">
+    <h3>2.Which of the following is not a data type?</h3>
+    <ul>
+      <li><input type="radio" name="quest2" value="0" ><strong>Boolean</strong></li>
+      <li><input type="radio" name="quest2" value="0" ><strong>String</strong></li>
+      <li><input type="radio" name="quest2" value="0" ><strong>Number</strong></li>
+      <li><input type="radio" name="quest2" value="5" ><strong>Array</strong></li>
+    </ul>
+    <button id="but2" class="btn btn-primary" type="button" name="button" onclick = "" >Next</button>
+</div>
+<div class="arr">
+    <h3>3.Which of the following is the correct way to create an array?</h3>
+    <ul>
+      <li><input type="radio" name="quest3" value="0" ><strong>var MyCar();</strong></li>
+      <li><input type="radio" name="quest3" value="5" ><strong>var myCar=[];</strong></li>
+      <li><input type="radio" name="quest3" value="0" ><strong>var myCar={};</strong></li>
+      <li><input type="radio" name="quest3" value="0" ><strong>var mycar=car();</strong></li>
+    </ul>
+    <button id="but3" class="btn btn-primary" type="button" name="button" onclick = "" >Next</button>
+</div>
+<div class="ceil">
+    <h3>4.The function Math.ceil(3.5) returns:</h3>
+    <ul>
+      <li><input type="radio" name="quest4" value="5" ><strong>4</strong></li>
+      <li><input type="radio" name="quest4" value="0" ><strong>3.6</strong></li>
+      <li><input type="radio" name="quest4" value="0" ><strong>3</strong></li>
+      <li><input type="radio" name="quest4" value="0" ><strong>3.7</strong></li>
+    </ul>
+    <button id="but4" class="btn btn-primary" type="button" name="button" onclick = "" >Next</button>
+</div>
+<div class="var">
+    <h3>5.Which of the following asserts that variables 'A', 'B' and 'C' have unequal values?</h3>
+    <ul>
+      <li><input type="radio" name="quest5" value="0" ><strong>A ===B && B === C && C===A</strong></li>
+      <li><input type="radio" name="quest5" value="0" ><strong>A === B || B === C || C === A</strong></li>
+      <li><input type="radio" name="quest5" value="5" ><strong>A !== B && B !== C && A !== C</strong></li>
+      <li><input type="radio" name="quest5" value="0" ><strong>A & B = C</strong></li>
+    </ul>
+    <button id="but5" class="btn btn-primary" type="button" name="button" onclick = "" >Submit</button>
+    </div>
+  </form>
+
+    <button id="but6" class="btn btn-primary" type="button" name="button" onclick = "" >Go back</button>
   </div>
 </body>
 </html>
