--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
     <button id="but5" class="btn btn-primary" type="button" name="button" onclick = "" >Submit</button>
     </div>
   </form>
-
+  <button id="but6" class="btn btn-primary" type="button" name="button" onclick = "" >Go back</button>
+      <div class="">
+        <h3 id="results" class="text-uppercase"></h3>
+  <h3 id ="outcome"></h3>
+  <img id ="img" alt="" >
+      </div>
     <button id="but6" class="btn btn-primary" type="button" name="button" onclick = "" >Go back</button>
   </div>
 </body>
